--- a/Seashore/resources/en.lproj/SeaDocument.xib
+++ b/Seashore/resources/en.lproj/SeaDocument.xib
@@ -458,9 +458,9 @@
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V8z-3o-RuR">
-                                                                    <rect key="frame" x="6" y="5" width="478" height="16"/>
+                                                                    <rect key="frame" x="6" y="5" width="266" height="16"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" title="Please support the Seashore Project." usesSingleLineMode="YES" id="OpK-8c-v4O">
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" title="Please support the Seashore Project." allowsEditingTextAttributes="YES" usesSingleLineMode="YES" id="OpK-8c-v4O">
                                                                         <font key="font" usesAppearanceFont="YES"/>
                                                                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -475,6 +475,18 @@
                                                                     </buttonCell>
                                                                     <connections>
                                                                         <action selector="showSupportSeashore:" target="6" id="CXx-HX-A3Q"/>
+                                                                    </connections>
+                                                                </button>
+                                                                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8uP-xu-J2s">
+                                                                    <rect key="frame" x="259" y="3" width="72" height="19"/>
+                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                                    <buttonCell key="cell" type="roundRect" title="(Updated)" bezelStyle="roundedRect" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="tb2-q9-qpS">
+                                                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                                        <font key="font" metaFont="cellTitle"/>
+                                                                    </buttonCell>
+                                                                    <color key="contentTintColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                                                                    <connections>
+                                                                        <action selector="showSupportSeashore:" target="6" id="jd2-pj-117"/>
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
